[tool.poetry]
name = "olson-fuel-calculator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.6"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.960"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
